Hide topbar for print

--- a/src/Argon/WebBundle/Resources/views/layout.html.twig
+++ b/src/Argon/WebBundle/Resources/views/layout.html.twig
@@ -20,7 +20,7 @@
         </div>
         <div class="off-canvas-content" data-off-canvas-content>
           {% block header %}
-          <div class="top-bar">
+          <div class="top-bar hide-for-print">
             <div class="top-bar-title">
               <a href="{{ path("homepage") }}" title="{{ "Alternate Reality Games Oriented Network" }}">
                 <strong>{{ "Argonbook" }}</strong>
