--- a/src/Argon/WebBundle/Resources/views/layout.html.twig
+++ b/src/Argon/WebBundle/Resources/views/layout.html.twig
@@ -68,7 +68,7 @@
           {% endblock %}
           <footer>
             {% block footer %}
-            <p>&copy; {{ "Argonbook" }} {{ "now"|date("Y") }} by <a href="#">{{ "Abenteuerritter" }}</a></p>
+            <p>&copy; {{ "Argonbook" }} {{ "now"|date("Y") }} by <a href="http://www.abenteuerritter.de/">{{ "Abenteuerritter" }}</a></p>
             {% endblock %}
           </footer>
         </div>
