--- a/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
@@ -8,5 +8,5 @@
 
   {% endif %}
 
-  {{ render(controller("ArgonNewsBundle:Block:latest")) }}
+  {{ render(controller("ArgonBlogBundle:Block:latest")) }}
 {% endblock %}
