--- a/src/Argon/WebBundle/Resources/views/layout_admin.html.twig
+++ b/src/Argon/WebBundle/Resources/views/layout_admin.html.twig
@@ -3,7 +3,7 @@
 {% block nav %}
 <ul class="menu align-right">
   <li><a href="{{ path("admin_player") }}">{{ "admin.layout.player"|trans }}</a></li>
-  <li><a href="{{ path("admin_news") }}">{{ "admin.layout.news"|trans }}</a></li>
+  <li><a href="{{ path("admin_blog") }}">{{ "admin.layout.blog"|trans }}</a></li>
   <li><a href="{{ path("admin_character") }}">{{ "admin.layout.character"|trans }}</a></li>
   <li><a href="{{ path("admin_race") }}">{{ "admin.layout.race"|trans }}</a></li>
   <li><a href="{{ path("admin_skill") }}">{{ "admin.layout.skill"|trans }}</a></li>
