Deprecate ansible_ssh_user

--- a/etc/nginx/sites-enabled/argonbook.local.conf.j2
+++ b/etc/nginx/sites-enabled/argonbook.local.conf.j2
@@ -4,7 +4,7 @@ upstream argonbook {
 
 server {
     listen 80;
-    root /home/{{ ansible_ssh_user }}/argonbook/web;
+    root /home/{{ user }}/argonbook/web;
 
     access_log /var/log/nginx/argonbook-access.log;
     error_log /var/log/nginx/argonbook-error.log;
