--- a/src/Argon/BlogBundle/Resources/views/Admin/Post/view.html.twig
+++ b/src/Argon/BlogBundle/Resources/views/Admin/Post/view.html.twig
@@ -38,7 +38,9 @@
   <dt>{{ "admin.blog.image"|trans }}</dt>
   <dd>
     {% if post.imagePath %}
-      <a href="{{ asset(post.imagePath) }}">{{ post.imagePath }}</a>
+      <a href="{{ asset(post.imagePath) }}">
+        <img src="{{ asset(post.imagePath) }}" alt="{{ post.title }}">
+      </a>
     {% else %}
       <p class="warning">{{ "admin.blog.image_empty"|trans }}</p>
     {% endif %}
