--- a/src/Argon/BlogBundle/Resources/views/Admin/Post/index.html.twig
+++ b/src/Argon/BlogBundle/Resources/views/Admin/Post/index.html.twig
@@ -38,6 +38,8 @@
         <div class="button-group">
           {% if not post.isPublished %}
             <a href="{{ path("admin_blog_publish", {"slug": post.slug}) }}" class="button">{{ "admin.blog.publish"|trans }}</a>
+          {% else %}
+            <a href="{{ path("admin_blog_comment", {"slug": post.slug}) }}" class="button"><span class="secondary badge">{{ post.comments|length }}</span> {{ "admin.blog.comments"|trans }}</a>
           {% endif %}
           <a href="{{ path("admin_blog_edit", {"slug": post.slug}) }}" class="button">{{ "admin.blog.edit"|trans }}</a>
         </div>
