--- a/app/assets/scss/argonbook.scss
+++ b/app/assets/scss/argonbook.scss
@@ -62,6 +62,11 @@ $section-space: rem-calc(40);
   }
 }
 
+.comment {
+  border: 1px solid darken($body-font-color, 50%);
+  padding: rem-calc(10 16);
+}
+
 abbr {
   text-decoration: none;
 }
