--- a/src/Argon/BlogBundle/Resources/views/Block/post.html.twig
+++ b/src/Argon/BlogBundle/Resources/views/Block/post.html.twig
@@ -1,3 +1,6 @@
+{% if show_big_title %}
+  <h2>{{ post.title }}</h2>
+{% endif %}
 <div class="media-object stack-for-small">
   {% if post.imagePath %}
   <div class="media-object-section">
@@ -7,11 +10,11 @@
   </div>
   {% endif %}
   <div class="media-object-section main-section">
-    <h4>{{ post.title }}</h4>
+    {% if not show_big_title %}<h4>{{ post.title }}</h4>{% endif %}
     <div class="post">{{ post_rendered|raw }}</div>
     <div class="meta">
       <small class="meta">{{ "blog.footer"|trans({"%creator%": post.creator, "%published%": post.publishedAt|date}) }}</small>
-      {% if show_links is defined and show_links %}
+      {% if show_links %}
         <div class="small button-group">
           <a href="{{ path('blog_post', {"slug": post.slug}) }}" class="button">{{ "blog.comments"|trans }}
            <span class="secondary badge">{{ post.comments|length }}</span>
