--- a/src/Argon/UserBundle/Resources/views/Profile/show_content.html.twig
+++ b/src/Argon/UserBundle/Resources/views/Profile/show_content.html.twig
@@ -14,6 +14,7 @@
     </h4>
   </div>
 </div>
-<p class="text-center">
-  <a href="{{ path("fos_user_change_password") }}">{{ "change_password.submit"|trans }}</a>
+<p>
+  <a href="{{ path("fos_user_profile_edit") }}" class="expanded button">{{ "profile.edit.submit"|trans }}</a>
+  <a href="{{ path("fos_user_change_password") }}" class="expanded button">{{ "change_password.submit"|trans }}</a>
 </p>
