--- a/src/Argon/UserBundle/Resources/views/ChangePassword/change_password_content.html.twig
+++ b/src/Argon/UserBundle/Resources/views/ChangePassword/change_password_content.html.twig
@@ -3,4 +3,7 @@
   <p>
     <input type="submit" class="expanded button" value="{{ "change_password.submit"|trans }}" />
   </p>
+  <p class="text-center">
+    <a href="{{ path("fos_user_profile_show") }}">{{ "layout.profile"|trans }}</a>
+  </p>
 </form>
