--- a/src/Argon/GameBundle/Resources/views/Character/skills.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/skills.html.twig
@@ -18,7 +18,7 @@
       <div class="medium-2 columns">
         {{ form_widget(form.submit) }}
       </div>
-      <div class="medium-2 columns"
+      <div class="medium-2 columns">
         <ul>
           <li><big id="experience-available">{{ character.availableExperience|default(0) }}</big> {{ "character_experience.stats.available"|trans }}</li>
           <li><big id="experience">{{ character.experience|default(0) }}</big> {{ "character_experience.stats.total"|trans }}</li>
