--- a/src/Argon/GameBundle/Resources/views/Admin/Skill/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Skill/view.html.twig
@@ -28,7 +28,7 @@
   </dt>
   <dd>
     {% if entity.abilityCode %}
-      <abbr title="{{ entity.abilityCode }}">{{ ("character_ability.types." ~ entity.abilityCode)|trans({}, "admin.forms") }}</abbr>
+      <abbr title="{{ entity.abilityCode }}">{{ ("character_ability.types." ~ entity.abilityCode)|trans }}</abbr>
     {% else %}
       <em>{{ "admin.skill.ability_empty"|trans }}</em>
     {% endif %}
