--- a/src/Argon/GameBundle/Resources/views/Admin/Partial/Race/list.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Partial/Race/list.html.twig
@@ -2,6 +2,7 @@
   <thead>
     <tr>
       <th>{{ "admin.race.name"|trans }}</th>
+      <th>{{ "admin.race.modifier"|trans }}</th>
       <th>{{ "admin.race.genres"|trans }}</th>
       <th>&nbsp;</th>
     </tr>
@@ -10,6 +11,7 @@
   {% for race in entities %}
     <tr>
       <td><a href="{{ path("admin_race_view", {"slug": race.slug}) }}">{{ race }}</a></td>
+      <td>{{ race.modifier }}</td>
       <td>
         <div class="genres">
         {% for genre in race.genres %}
