--- a/src/Argon/GameBundle/Resources/views/Block/character_nick.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Block/character_nick.html.twig
@@ -1,4 +1,4 @@
-<span class="label">{{ character.game.info.callsign }}</span>
+<span class="label">{{ character.game.info.callsign }}{{ character.level }}</span>
 
 {% spaceless %}
   {% if showPlayer %}
