--- a/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
@@ -15,6 +15,10 @@
 <div class="row">
   <div class="small-9 columns">
     <h3>{{ "admin.dashboard.whatsnew"|trans }}</h3>
+    <h5>1.23</h5>
+    <ul>
+      <li>A character level is calculated by the game and shown next to the nick,</li>
+    </ul>
     <h5>1.22</h5>
     <ul>
       <li>Games and races now have genres,</li>
