Level stat instead of lead

--- a/src/Argon/GameBundle/Resources/views/Character/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/view.html.twig
@@ -7,7 +7,7 @@
 <h1>{{ character }}</h1>
 <div class="row align-middle">
   <div class="small-2 columns">{#}<h2>{{ "character.level"|trans }}</h2>{#}
-    <big class="level lead">{{ character.level }}</big>
+    <big class="level stat">{{ character.level }}</big>
   </div>
   <div class="small-5 columns">{#}<h2>{{ "character.info"|trans }}</h2>{#}
     <dl>
