--- a/src/Argon/GameBundle/Resources/views/Character/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/view.html.twig
@@ -25,48 +25,51 @@
     {{ include("ArgonGameBundle:Partial\\Character:abilities.html.twig", {"character": character}) }}
   </div>
 </div>
-{% if character.story %}
-  <article>
+<div class="row">
+  <div class="large-8 columns">
+    <h2>{{ "character.skills"|trans }}</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>&nbsp;</th>
+          <th>{{ "skill.name"|trans }}</th>
+          <th>{{ "skill.level"|trans }}</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for skill in character.skills %}
+        <tr>
+          <td>
+            {% if skill.skill.abilityCode %}
+              <abbr title="{{ ("character_ability.types." ~ skill.skill.abilityCode)|trans }} ({{ skill.skill.abilityCode }})">*</abbr>
+            {% else %}
+              <abbr title="{{ "skill.ability_empty"|trans }}">*</abbr>
+            {% endif %}
+          </td>
+          <td>{{ skill.skill }}</td>
+          <td>{{ skill.level }}</td>
+        </tr>
+      {% else %}
+        <tr class="warning">
+          <td colspan="3">{{ "character_skill.empty_3rd"|trans }}</td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>
+  </div>
+  {% if character.story %}
+  <div class="large-4 columns">
     <h2>{{ "character.story"|trans }}</h2>
     {{ include("ArgonGameBundle:Partial\\Character:story.html.twig", {"character": character}) }}
-    {% if character.note %}
-      <p><strong>{{ "character.note"|trans }}</strong> {{ character.note|nl2br }}</p>
+    {% if story_note %}
+      <div class="note"><h5>{{ "character.note"|trans }}</h5>{{ story_note|raw }}</div>
     {% endif %}
-  </article>
-{% endif %}
-<div class="row">
-  <h2>{{ "character.skills"|trans }}</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>&nbsp;</th>
-        <th>{{ "skill.name"|trans }}</th>
-        <th>{{ "skill.level"|trans }}</th>
-      </tr>
-    </thead>
-    <tbody>
-    {% for skill in character.skills %}
-      <tr>
-        <td>
-          {% if skill.skill.abilityCode %}
-            <abbr title="{{ ("character_ability.types." ~ skill.skill.abilityCode)|trans }} ({{ skill.skill.abilityCode }})">*</abbr>
-          {% else %}
-            <abbr title="{{ "skill.ability_empty"|trans }}">*</abbr>
-          {% endif %}
-        </td>
-        <td>{{ skill.skill }}</td>
-        <td>{{ skill.level }}</td>
-      </tr>
-    {% else %}
-      <tr class="warning">
-        <td colspan="3">{{ "character_skill.empty_3rd"|trans }}</td>
-      </tr>
-    {% endfor %}
-    </tbody>
-  </table>
+  </div>
+  {% endif %}
 </div>
 {% if experiences %}
-  <div class="row">
+<div class="row">
+  <div class="large-12 columns">
     <h2>{{ "character.experience"|trans }}</h2>
     <table>
       <thead>
@@ -102,5 +105,6 @@
       </tfoot>
     </table>
   </div>
+</div>
 {% endif %}
 {% endblock %}
