--- a/src/Argon/GameBundle/Resources/views/Block/character_nick.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Block/character_nick.html.twig
@@ -12,7 +12,7 @@
   (
   {% if linkExperience %}
     <a href="{{ linkExperience }}">
-      <span class="fi-graph-trend"></span>
+      <span class="fi-graph-bar"></span>
       <span class="experience">{{ character.skillsExperience }}/{{ character.experience }}</span>
     </a>
   {% endif %}
