--- a/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
@@ -17,7 +17,7 @@
     <h3>{{ "admin.dashboard.whatsnew"|trans }}</h3>
     <h5>1.23</h5>
     <ul>
-      <li>A character level is calculated by the game and shown next to the nick,</li>
+      <li>A character level is calculated by the game and shown next to the nick like this <span class="label">E7</span>,</li>
     </ul>
     <h5>1.22</h5>
     <ul>
