Server name in nginx conf

--- a/etc/nginx/sites-enabled/argonbook.eu.conf.j2
+++ b/etc/nginx/sites-enabled/argonbook.eu.conf.j2
@@ -4,6 +4,7 @@ upstream argonbook {
 
 server {
     listen 80;
+    server_name argonbook.eu;
     root /srv/www/argonbook.eu/current/web;
 
     access_log /var/log/nginx/argonbook-access.log;
