--- a/src/Argon/GameBundle/Resources/views/Admin/Skill/edit.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Skill/edit.html.twig
@@ -3,6 +3,13 @@
 
 {% block title %}{{ parent() }} - {{ "admin.skill.skills"|trans }} - {{ skill }} - {{ "admin.skill.edit"|trans }}{% endblock %}
 
+{% block stylesheets %}
+{{ parent() }}
+<style type="text/css">
+  #skill_edit_requirements { height: 300px; overflow: auto; }
+</style>
+{% endblock %}
+
 {% block top %}
 <nav aria-label="{{ "admin.you_are_here"|trans }}" role="navigation">
   <ul class="breadcrumbs">
