--- a/app/assets/scss/argonbook.scss
+++ b/app/assets/scss/argonbook.scss
@@ -19,6 +19,7 @@ $offcanvas-size: 50%;
 $offcanvas-background: #2e363a;
 
 $topbar-background:              $body-background;
+$card-background:                $body-background;
 $callout-background:             $body-background;
 $callout-background-fade: 10%;
 $callout-margin: 1rem 0;
